tests/fsharp/typeProviders/negTests/neg2e.bsl

neg2e.fsx(7,41,7,85): typecheck error FS3039: A direct reference to the generated type 'TheContainerType' is not permitted. Instead, use a type definition, e.g. 'type TypeAlias = <path>'. This indicates that a type provider adds generated types to your assembly.

neg2e.fsx(10,19,10,63): typecheck error FS3039: A direct reference to the generated type 'TheContainerType' is not permitted. Instead, use a type definition, e.g. 'type TypeAlias = <path>'. This indicates that a type provider adds generated types to your assembly.

neg2e.fsx(10,96,10,140): typecheck error FS3039: A direct reference to the generated type 'TheContainerType' is not permitted. Instead, use a type definition, e.g. 'type TypeAlias = <path>'. This indicates that a type provider adds generated types to your assembly.
